crates/eden-file-diagnostics/src/renderer/snapshots/eden_file_diagnostics__renderer__tests__render_with_multiple_labels.snap
---
source: crates/eden-file-diagnostics/src/renderer/mod.rs
expression: rendered.to_string()
---
error: type mismatch
  ┌─ calculator.rs:1:8
  │
1 │ fn add(a: i32, b: i32) -> i32 {
  │        ^       - and here
  │        │        
  │        expected type here
  │
  = consider using the same type for both parameters
